# openTools

./: .gitignore  .ignore  51ToolBox_项目架构分析报告.md  51toolbox_账号体系设计_489884df.plan.md  AGENTS.md  README.md  ROADMAP.md  diff.txt  eslint.config.js  git_diff_output.txt  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
.claude/: settings.local.json
crates/screen-capture-helper/: Cargo.toml
crates/screen-capture-helper/src/: export.rs  main.rs  protocol.rs  recorder.rs  screenshot.rs  stitcher.rs
docs/: README.md  agent-cluster-architecture-review.md  ai-assistant-architecture-review.md  ai-assistant-improvement-plan.md  ai-context-memory-full-overhaul-plan.md  ai-im-channel-dialog-solution.md  ai-long-term-memory.md  ai-openclaw-memo-layered-architecture.md  ai-openclaw-parity-development-roadmap.md  builtin-plugin-platform-capability-matrix.md  claude-code-gap-detailed.md  claude-code-migration-rfc.md  clawhub-current-implementation.md  color-picker-options.md  data-export-query-and-mcp-status.md  dialog-mode-refactor-status-and-next-wave.md  dialog_agent_管理增强_52a710b2.plan.md  final-problem-fix.md  mtools-server-docker-deploy.md  official-plugin-release.md  project-review-report.md  quality-gate.md  release-manual-checklist-win-mac.md  subscription-ops.md  team-skill-marketplace-optimal-architecture.md
mtools-server/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  docker-compose.prod.yml  docker-compose.yml
mtools-server/migrations/: 20260216183000_init.sql  20260216190000_add_tables.sql  20260217090000_add_team_ai_priority.sql  20260217120000_add_ai_config_protocol_and_limit.sql  20260218200000_kb_documents.sql  20260219103000_add_team_ai_quota.sql  20260219120000_quota_bigint_and_deprecate_member_limit.sql  20260220100000_add_subscription_and_team_workflow_templates.sql  20260220113000_add_plugin_market_tables.sql  20260220183000_seed_builtin_market_apps.sql  20260221110000_add_plugin_market_releases_and_official_apps.sql  20260323120000_add_team_data_export.sql  20260324110000_add_team_skill_marketplace_configs.sql  20260324123000_add_team_published_skills.sql  20260324150000_add_team_skill_marketplace_cache_and_logs.sql
mtools-server/src/: config.rs  crypto.rs  error.rs  lib.rs  main.rs
mtools-server/src/middleware/: auth.rs
mtools-server/src/models/: mod.rs  sync.rs  user.rs
mtools-server/src/routes/: ai.rs  app_update.rs  auth.rs  kb.rs  mod.rs  ocr.rs  plugins.rs  stubs.rs  sync.rs  team_data_export.rs  team_entitlements.rs  team_quota_common.rs  team_quota_routes.rs  team_workflow_templates.rs  teams.rs  users.rs
mtools-server/src/services/: auth.rs  entitlement.rs  mod.rs  ocr.rs
mtools-server/uploads/kb/personal/f9be103e-7e6d-430a-bdd7-02a711832544/: 0e42d0e7-684b-4d47-b4e5-6ae0c6503bde_demo-knowledge-base.md
official-plugins/51cto-nav/: index.html  plugin.json
official-plugins/bookmarks/: index.html  plugin.json
official-plugins/dev-toolbox/: index.html  plugin.json
official-plugins/image-search/: index.html  plugin.json
official-plugins/note-hub/: index.html  plugin.json
official-plugins/qr-code/: index.html  plugin.json
official-plugins/snippets/: index.html  plugin.json
official-plugins/system-actions/: index.html  plugin.json
plugins/: README.md
scripts/: assemble_five_course_topics.py  build-win-with-helper.mjs  build_remaining_27_five_courses.py  chunk-size-baseline.json  clean-dmg.sh  compile_five_course_topic_files.py  ensure-node.cjs  export_five_course_markdown_to_excel.py  export_markdown_to_word.py  fill_ai_training_excel.py  generate_ai_training_course_draft.py  generate_expanded_course_pool.py  generate_remaining_27_five_courses.py  official-build.mjs  official-publish.mjs  prepare_five_course_batch.py  quality-check.sh  refresh_final_five_course_variety.py  registry.json
scripts/athena-data-test/: test_script.py
scripts/saas-export-exam-questions/: export_exam_questions.py
src/: App.tsx  global.d.ts  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/plugins/builtin-color-picker/: index.html  plugin.json
src-tauri/plugins/builtin-screen-capture/: index.html  plugin.json
src-tauri/resources/: ffmpeg
src-tauri/resources/ocr/: README.md  libonnxruntime.dylib
src-tauri/src/: branding.rs  crypto.rs  error.rs  lib.rs  mtplugin.rs
src-tauri/src/commands/: ai.rs  ckg.rs  clipboard.rs  collection.rs  data_export.rs  data_forge.rs  database.rs  ding.rs  dingtalk_stream.rs  feishu_ws.rs  file_search.rs  git_sync.rs  im_callback.rs  mcp.rs  mod.rs  mtools_sync.rs  native_apps.rs  ocr.rs  picker_macos.m  plugin.rs  rag.rs  screen_capture.rs  skill_marketplace.rs  ssh.rs  system.rs  translate.rs  webdav.rs  window.rs  workflow.rs
src-tauri/src/commands/agent_orchestrator/: mod.rs
src-tauri/src/commands/agent_runtime/: mod.rs
src-tauri/src/commands/ai/: agent.rs  mod.rs  model_capabilities.rs  request.rs  tool_call_stream.rs  types.rs
src-tauri/src/commands/ai/stream/: anthropic.rs  mod.rs  openai.rs
src-tauri/src/commands/ai/tools/: definitions.rs  executor.rs  mod.rs
src-tauri/src/commands/plugin/: api_bridge.rs  lifecycle.rs  mod.rs  types.rs
src-tauri/src/commands/plugin/api_bridge/: api_methods.rs  dev_tools.rs  html_bridge.rs
src-tauri/src/commands/plugin/lifecycle/: dev_watch.rs  market_ops.rs
src-tauri/src/commands/screen_capture/: capture.rs  image_utils.rs  mod.rs  recording.rs
src-tauri/src/commands/workflow/: engine.rs  mod.rs  scheduler.rs  types.rs
src/config/: app-branding.ts
src/core/: constants.ts  context-detector.ts  logger.ts  storage.test.ts  storage.ts
src/hooks/: use-input-attachments.ts  useAppInitializer.ts  useAuthSessionKeeper.ts  useColorPicker.ts  useDragWindow.ts  useImageInput.ts  usePluginLifecycle.ts  useScreenCapture.ts  useSearchResults.ts  useSync.ts
src/shell/: CommandRouter.ts  PluginBridge.ts  ResultBuilder.ts  WindowSizeManager.ts  commands.tsx  useAppSearch.ts  useFileSearch.ts  usePluginEmbed.ts  useScreenshotHandler.ts
(+709 files in other folders)
