[package]
name = "mtools-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["macros", "multipart"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
jsonwebtoken = "9.3"
argon2 = "0.5"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
anyhow = "1.0"
thiserror = "2.0"
validator = { version = "0.16", features = ["derive"] }
async-trait = "0.1"
redis = { version = "0.27", features = ["tokio-comp"] }
futures-util = "0.3"
rand = "0.9"
http = "1.0"
tower_governor = "0.8"
once_cell = "1"
aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"
base64 = "0.22"
