[package]
name = "toolbox"
version = "0.1.0"
description = "51ToolBox - AI-First Desktop Toolbox"
authors = ["51CTO"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "devtools"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-notification = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
tauri-plugin-store = "2"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls", "system-proxy", "multipart"], default-features = false }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["json", "tokio", "http1"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
lark-websocket-protobuf = "0.1.1"
prost = "0.13"
futures-util = "0.3"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1"
open = "5"
hostname = "0.4"
dirs = "5"
image = "0.25"
base64 = "0.22"
arboard = "3"
url = "2"
percent-encoding = "2.3"
sysinfo = "0.30"
thiserror = "2"
aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"
rand = "0.9"
zip = { version = "2.2", default-features = false, features = ["deflate"] }
tree-sitter = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.25"
tree-sitter-python = "0.25"
tree-sitter-rust = "0.23"
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
walkdir = "2"
glob = "0.3"
ignore = "0.4"
ssh2 = { version = "0.9", features = ["vendored-openssl"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "mysql", "sqlite", "chrono", "json", "uuid"] }
mongodb = "3"
calamine = "0.26"
pdf-extract = "0.7"
quick-xml = "0.37"
rust_xlsxwriter = "0.79"
openssl = { version = "0.10", features = ["vendored"] }
notify = "6"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = ["Win32_Graphics_Gdi", "Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_System", "Win32_System_Threading"] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"
